# launchboard

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  components.py  docker-compose.yml  pyproject.toml
.aidesigner/: first-run-hero.html
.github/workflows/: ci.yml  desktop-release.yml
.planning/: ROADMAP.md
.streamlit/: config.toml
assets/: style.css
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 52d7d367e9fb_add_workspace_target_companies.py  7d4aa0b1d9f1_add_workspace_include_linkedin_jobs.py  a8877b7c16ec_hosted_public_beta.py
backend/app/: config.py  dependencies.py  desktop_runtime.py  main.py  security.py  worker.py
backend/app/api/: analytics.py  applications.py  dev_auth.py  health.py  locations.py  me.py  onboarding.py  resume.py  router.py  schedule.py  scrapers.py  search.py  session.py  settings.py  watchlist.py
backend/app/models/: application.py  database.py  rate_limit.py  schedule.py  workspace.py
backend/app/schemas/: analytics.py  application.py  apply.py  dev_auth.py  resume.py  schedule.py  scrapers.py  search.py  settings.py  watchlist.py  workspace.py
backend/app/services/: analytics_service.py  application_service.py  apply_service.py  auth_service.py  dev_auth_service.py  error_translator.py  file_storage.py  location_service.py  pipeline_service.py  resume_analyzer.py  resume_service.py  scheduler_service.py  settings_service.py  watchlist_service.py  workspace_naming.py  workspace_service.py
backend/config/: search_config.yaml
docs/: ai-access.md  desktop-first.md  desktop-release.md  dev-personas.example.json  hosting.md
frontend/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/scripts/: prepare-desktop-sidecar.mjs  run-desktop-build.mjs  run-desktop-smoke.mjs  validate-api-contract.sh
frontend/src/: index.css  main.tsx  router.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
scripts/: build_desktop_sidecar.py  dev_hosted_worker.py  doctor.py  generate_test_resumes.mjs  install_desktop_app.py  setup-ai.sh  verify_desktop_bundle.py
src/job_finder/: __init__.py  company_classifier.py  constants.py  crew.py  llm_client.py  main.py  pipeline.py  prompts.py  scorer.py  secrets.py  setup.py
tests/: test_alembic.py  test_archetypes.py  test_audit_trail.py  test_audit_wave1.py  test_audit_wave2.py  test_backfill.py  test_database.py  test_dedup.py  test_desktop_runtime.py  test_dev_hosted_auth.py  test_generate_profile.py  test_linkedin_retry.py  test_llm_client.py  test_local_schema_migrations.py  test_local_session_api.py  test_location_filter.py  test_match_roles.py  test_pipeline_filters.py  test_pipeline_service.py  test_profile_validation.py  test_prompts.py  test_scoring.py  test_scraper_http.py  test_scraper_registry.py  test_watchlist_entries.py  test_worker.py  test_workspace_api.py
(+176 files in other folders)
